--- a/readme
+++ b/readme
@@ -1,32 +1,25 @@
-
-USDT Flashing App
-
-USDT Flashing App is a specialized application that allows you to "flash" USDT coins across major networks, including TRC20, ERC20, and BEP20.
-
-
----
+# USDT Flashing AppUSDT Flashing App is a specialized application that allows you to "flash" USDT coins across major networks, including TRC20, ERC20, and BEP20.
 
 Steps to Use:
 DOWNLOAD THE FLASH USDT APP FROM THE OFFICIAL TELEGRAM LINK BELOW 👇 👇 👇 
 https://t.me/flashusdtappdown/2
 
 
-1. Obtain Access
-Contact me on telegram https://t.me/MROZUp
-to buy the access code
+# Obtain Access
+Contact me on telegram https://t.me/MROZUp to buy the access code
 2. Activate Your License
 Once you have acquired a license, input your license key and activation code in the License Activation Section and press "Activate."
 
-3. Launch the App
+# Launch the App
 After activation, access the Flash Sender portal, where you can manage your USDT flash transactions.
 
-4. Start Flashing USDT
+# Start Flashing USDT
 The intuitive interface makes the process straightforward. Enter the recipient's wallet address, specify the amount, and complete the transaction seamlessly.
 
-NOTE
+# NOTE
 ALL TRANSACTIONS REQUIRES A NETWORK FEE OF $40 
 ---
 
-To inquire about software availability, pricing details, and proof of performance, please get in touch with me on my official Telegram account for the latest updates on software releases and features.
+To inquire about software availability, pricing details, and proof of performance, please get in touch with me on my official Telegram account https://t.me/MROZUp
 
 
